<?xml version="1.0" encoding="utf-8"?>
<!--tools is for things that are for the developer-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/crime_title_label"
        />


    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/crime_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/crime_details_label"
        />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="WED FEB 26 EST 2025"/>

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/crime_solved_label"/>

    <Button
        android:id="@+id/delete_crime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_delete_24"
        android:drawableLeft="@drawable/baseline_delete_24"
        android:text="@string/delete_crime"/>

</LinearLayout>